2016-07-01 Roman
- SYS: A prefix with the station name is added to most significant system's messages.
- FIX:UI.VCAEngine: Visualiser specific attributes force to modify at it's activation.
- UI.Vision: Lock for main window run mode change at the session update-reconnect.


2016-06-29 Roman
- Archive: messPut() expanded for alarms set and processing in first order and allow ignore new but equal ones in redundancy.
- DAQ.{BFN,DAQGate,MMS,ModBus,OPC_UA,Siemens}: Name of parameter of alarm messages expanded by the module name.
- FIX:DAQ.DAQGate: No removing archives at the parameter removing is fixed for first-level parameters.
- DAQ.LogicLev: The system IO "f_err" allowed for redundancy.
- DAQ.OPC_UA.libOPC_UA: Noncrashed NaN publish interval processing added.
- DAQ.SNMP: Local "dataRes" removed.
- Protocol.SelfSystem: Local "sesRes" removed.
- !!:UI.VCAEngine: Session local dataMtx() is replaced by generic dataRes() of node.
    Connections management by it's connection ID is added, mostly for detect remoted VCAServer change and re-iniate needs then.
- !!:UI.Vision: Help's field "Developers" is removed by merging it to the field "Author".
    Using of connection ID is added.
    Force to widgets update and restoring openned pages at a reconnection is added.


2016-06-23 Roman
- !!!:Archive,*: To messages get functions added a time result of the finished processing.
    Mostly for allow fast continue from the point after long terminated by the timeout requests.
    The limit rdRestDtOverTm rise to days and up to 356.
- Archive.DBArch: The property "maxSize" is expanded from hours to days.
    The used table closing after any put request is disabled.
- Archive.{DBArch,FSArch}: Get messages request for equal begin and end time is allowed.
- Archive.FSArch: Get from XML set some optimal. Get from plain allowed for the messages time equal to end.
- Special.SystemTests: The DB tests are expanded by a seek test.


2016-06-21 Roman